reverted and fixed collapsed design cause by absolute positioning

--- a/app/static_src/less/partials/header.less
+++ b/app/static_src/less/partials/header.less
@@ -287,14 +287,12 @@
 }
 
 .header-right-navigations {
-  z-index: 3;
-  position: absolute;
   display: inline-block;
   vertical-align: top;
   margin: 0 0 0 auto;
   font-size: 0;
   height: 45px;
-  right: 0;
+  float: right;
 }
 
 .header-right-navigations-mb-app {
